[project]
name = "dosh"
version = "0.4.0"
description = "Shell-independent task management CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "colorlog>=6.9.0",
    "lupa>=2.4",
]

[project.scripts]
dosh = "dosh.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-httpserver>=1.1.3",
]
